--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
             <artifactId>quarkus-opentelemetry</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.tkit.onecx.quarkus</groupId>
+            <artifactId>onecx-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.tkit.onecx.quarkus</groupId>
+            <artifactId>onecx-tenant</artifactId>
+        </dependency>
+
         <!-- OTHER -->
         <dependency>
             <groupId>org.projectlombok</groupId>
