--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,9 @@ quarkus.test.integration-test-profile=test
 %test.quarkus.rest-client.onecx_ai_svc.url=${quarkus.mockserver.endpoint}/ai
 
 # PIPE CONFIG
+
+#certificate
+#quarkus.ssl.trust-store-file=truststore.jks
+#quarkus.ssl.trust-store-password=changeit
+javax.net.ssl.trustStore=src/main/resources/quarkus.jks
+javax.net.ssl.trustStorePassword=changeit
