--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+networks:
+  onecx:
 services:
   postgresdb:
     image: bitnami/postgresql:12
@@ -14,20 +16,32 @@ services:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 10s
-      retries: 5    
+      retries: 5
+    networks:
+      - onecx
 
-  onecx-chat-svc:
+  onecx-ai-quarkus-svc:
 #    image: ghcr.io/onecx-apps/onecx-ai-quarkus-svc:0.0.0-rc.1
     image: localhost/onecx-ai-quarkus-svc:999-SNAPSHOT
+    networks:
+      - onecx
     environment:
       QUARKUS_DATASOURCE_USERNAME: onecx_ai   
       QUARKUS_DATASOURCE_PASSWORD: onecx_ai      
       QUARKUS_DATASOURCE_JDBC_URL: "jdbc:postgresql://postgresdb:5432/onecx-ai?sslmode=disable"
+    ports:
+      - "8080:8080"
     depends_on:
       postgresdb:
         condition: service_healthy
-
-
+  ollama:
+    image: ollama/ollama
+    networks:
+      - onecx
+    environment:
+      OLLAMA_ORIGINS: http://ollama
+    volumes:
+      - ollama:/root/.ollama
 # onecx-ai-svc:
 #  image: onecx-ai
 # ports:
@@ -38,3 +52,4 @@ services:
 
 volumes:
   postgres:
+  ollama:
