--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -5,5 +5,8 @@ on:
       - '**'
 jobs:
   release:
-    uses: onecx-apps/ci-quarkus/.github/workflows/build-release.yml@v2
+    uses: onecx-apps/ci-quarkus/.github/workflows/build-release.yml@v1
     secrets: inherit
+    with:
+      native: true
+      helmEventTargetRepository: onecx-apps/onecx-ai
