--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,18 +6,11 @@ on:
     branches:
       - 'main'
       - 'fix/[0-9]+.[0-9]+.x'
-    paths-ignore:
-      - '.gitignore'
-      - 'CODEOWNERS'
-      - 'LICENSE'
-      - '*.md'
-      - '*.adoc'
-      - '*.txt'
-      - '.all-contributorsrc'
 
 jobs:
   build:
-    uses: onecx-apps/ci-quarkus/.github/workflows/build.yml@v2
+    uses: onecx-apps/ci-quarkus/.github/workflows/build.yml@v1
     secrets: inherit
     with:
+      native: true    
       helmEventTargetRepository: onecx-apps/onecx-ai
