--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -9,5 +9,7 @@ on:
 
 jobs:
   branch:
-    uses: onecx-apps/ci-quarkus/.github/workflows/build-branch.yml@v2
+    uses: onecx-apps/ci-quarkus/.github/workflows/build-branch.yml@v1
     secrets: inherit
+    with:
+      native: true
