--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -5,5 +5,7 @@ on:
 
 jobs:
   pr:
-    uses: onecx-apps/ci-quarkus/.github/workflows/build-pr.yml@v2
+    uses: onecx-apps/ci-quarkus/.github/workflows/build-pr.yml@v1
     secrets: inherit
+    with:
+      native: true
