misc: remove with native

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,13 +4,12 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'main'
-      - 'fix/[0-9]+.[0-9]+.x'
+      - "main"
+      - "fix/[0-9]+.[0-9]+.x"
 
 jobs:
   build:
     uses: onecx-apps/ci-quarkus/.github/workflows/build.yml@v1
     secrets: inherit
     with:
-      native: true    
       helmEventTargetRepository: onecx-apps/onecx-ai
