--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,16 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'main'
-      - 'fix/[0-9]+.[0-9]+.x'
-    paths-ignore:
-      - '.gitignore'
-      - 'CODEOWNERS'
-      - 'LICENSE'
-      - '*.md'
-      - '*.adoc'
-      - '*.txt'
-      - '.all-contributorsrc'
+      - "main"
+      - "fix/[0-9]+.[0-9]+.x"
 
 jobs:
   build:
