ci: updated workflow

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -8,4 +8,5 @@ jobs:
     uses: onecx-apps/ci-quarkus/.github/workflows/build-release.yml@v2
     secrets: inherit
     with:
+      native: true
       helmEventTargetRepository: onecx-apps/onecx-ai
