ci: adapted cig

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -7,5 +7,5 @@ jobs:
   release:
     uses: onecx-apps/ci-quarkus/.github/workflows/build-release.yml@v2
     secrets: inherit
-    with:      
-      helmEventTargetRepository: onecx-apps/onecx-ai
+    with:
+      native: false
