--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,19 +4,14 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "main"
-      - "fix/[0-9]+.[0-9]+.x"
-    paths-ignore:
-      - '.gitignore'
-      - 'CODEOWNERS'
-      - 'LICENSE'
-      - '*.md'
-      - '*.adoc'
-      - '*.txt'
-      - '.all-contributorsrc'
+      - 'main'
+      - 'fix/[0-9]+.[0-9]+.x'
+
 jobs:
   build:
     uses: onecx-apps/ci-quarkus/.github/workflows/build.yml@v2
     secrets: inherit
-    with:      
-      helmEventTargetRepository: onecx-apps/onecx-ai
+    with:
+      native: true
+
+
